--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -66,6 +66,9 @@
     </div>
   </div>
   <div class="col-6">
+    <!-- Додавання карти -->
+    <div id="map" style="width: 100%; height: 300px"></div>
+
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
     <form
@@ -132,3 +135,11 @@
     <% } %>
   </div>
 </div>
+
+<!-- Додавання карт -->
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  const campground = <%- JSON.stringify(campground) %>
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
