--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,6 +12,13 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
+
+    <!-- Mapbox GL JS — це клієнтська бібліотека JavaScript для створення веб-карт Додавання карти на сторінку -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
