--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -67,7 +67,7 @@
   </div>
   <div class="col-6">
     <!-- Додавання карти -->
-    <div id="map" style="width: 100%; height: 300px"></div>
+    <div class="mb-3" id="map" style="width: 100%; height: 300px"></div>
 
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
