--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate')%>
+<!-- кластерна карта -->
+<div id="map" style="width: 100%; height: 500px"></div>
 
 <h1>All Campgrounds</h1>
 <div>
@@ -34,3 +36,12 @@
   </div>
 </div>
 <% }%>
+
+<!-- для кластерної карти -->
+<script>
+  const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+  // налаштовуємо на формат, який очікує Mapbox (features:)
+  const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
