--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,6 +19,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/stylesheet/app.css" />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
